--- a/证明.md
+++ b/证明.md
@@ -4,11 +4,11 @@ aliases:
   - 课设
 tags: []
 ---
-## $\mathbb{R}^3$中的八点六面体分类
+## $\mathbb{R}^3$中的八点六面体分类:
 - $①$ 六面均为四边形;
 - $②$ 六面中两个为三角形，两个为四边形，两个为五边形。
 证明：
-由欧拉多面体公式有V-E+F=2，可知，这个多面体边数一定为12，我们分别看这个多面体的每个面，由于每一个边一定为两个面之间的交线，所以每个边分别被数了两遍，那么这六个多边形的总边数和一定是多面体边数的两倍，即为24条。
+由欧拉多面体公式有$V-E+F=2$，可知，这个多面体边数一定为12，我们分别看这个多面体的每个面，由于每一个边一定为两个面之间的交线，所以每个边分别被数了两遍，那么这六个多边形的总边数和一定是多面体边数的两倍，即为24条。
 同理，由于每个点周围至少有三个多边形，所以多面体每个面的顶点数和至少为多面体顶点数的三倍，即大于等于24，由于对于多边形来说，边数一定和点数相同，那么顶点数和恰好为24，即每个点周围只能有三个多边形，这个点恰好也为多面体3条边的交线，所以多面体上与某一个顶点相邻的顶点只有3个。
 这个六面体显然不存在七边形和八边形；下证也不存在六边形。
 由多面体性质，若一个平面将$\mathbb{R}^3$分成了两侧，这个平面上所有的点必定都会与其中一侧的某点相连；并且在其中一侧的所有点必然会与另一个同侧的其他点相连。
@@ -18,8 +18,9 @@ tags: []
 依据多面体性质和相邻顶点数为3将五边形面外三点与五边形各点连接，即得$②$。
 若不存在大于等于五的多边形，则只有可能为六个四边形组成，即为$①$。
 
-## 原问题
-考虑$\mathbb{R}^3$中，中心为原点$O$，边长为2的立方体，顶点为$A_1$,$A_2$.....$A_8$。其中:
+# 原问题
+
+- 考虑$\mathbb{R}^3$中，中心为原点$O$，边长为2的立方体，顶点为$A_1$,$A_2$.....$A_8$。其中:
 $A_1=\begin{pmatrix} 1\\ 1\\ 1\end{pmatrix}$   ; $A_2=\begin{pmatrix}-1\\1\\1\end{pmatrix}$;$A_3=\begin{pmatrix}-1\\-1\\1\end{pmatrix}$;$A_4=\begin{pmatrix}1\\-1\\1\end{pmatrix}$;
 $A_5=\begin{pmatrix}1\\1\\-1\end{pmatrix}$;$A_6=\begin{pmatrix}-1\\1\\-1\end{pmatrix}$;$A_7=\begin{pmatrix}-1\\-1\\-1\end{pmatrix}$;$A_8=\begin{pmatrix}1\\-1\\-1\end{pmatrix}$;
 设$B=\begin{pmatrix}1\\a\\b\end{pmatrix}$。
@@ -134,7 +135,7 @@ r
 $$
 即：
 $$
-det
+\mathrm{det}
 \begin{pmatrix}
 -t_2&-t_3&t_4&t_1\\t_2&-t_3&-t_4&at_1\\t_2&t_3&t_4&bt_1\\1&1&1&1
 \end{pmatrix}
@@ -203,4 +204,4 @@ $$
 \end{pmatrix}
 $$
 所以得$a=b=1$。
-所以当且仅当$Q$与$A_1$点重合时才存在
+所以当且仅当$Q$与$A_1$点重合时才存在。
